[gd_scene load_steps=5 format=2]

[ext_resource path="res://buildings/barricade/sprites/barricade.png" type="Texture" id=1]
[ext_resource path="res://buildings/barricade/Barricade.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 14 )

[sub_resource type="CircleShape2D" id=2]
radius = 19.0263

[node name="Barricade" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.75 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -60.0
margin_top = -73.0
margin_right = 60.0
margin_bottom = -25.0
size_flags_horizontal = 0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBulding" type="Timer" parent="."]
one_shot = true

[node name="BuildingTime" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="StartBulding" to="." method="_on_StartBulding_timeout"]
[connection signal="timeout" from="BuildingTime" to="." method="_on_BuildingTime_timeout"]
